--- a/MangoDiary/package.json
+++ b/MangoDiary/package.json
@@ -14,6 +14,10 @@
     "vuex": "^4.1.0"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-regular-svg-icons": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/vue-fontawesome": "^3.0.5",
     "@vitejs/plugin-vue": "^4.5.2",
     "vite": "^5.0.10"
   }
